Opened 11 years ago

Closed 11 years ago

#10764 closed bug (fixed)

[Debugger] crashed in TeamMemoryBlockManager::_RemoveBlock

Reported by: diver Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Debugger Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev47114 gcc2 hybrid.

When Web+ crashed I clicked Save report button which in turn crashes Debugger.

Attachments (2)

Debugger-8558-debug-16-04-2014-12-48-00.report (13.3 KB ) - added by diver 11 years ago.
Debugger-2881-debug-07-05-2014-07-53-59.report (13.8 KB ) - added by diver 11 years ago.

Download all attachments as: .zip

Change History (10)

comment:1 by anevilyak, 11 years ago

Not entirely sure what went wrong there at this point...are you able to reproduce this one?

comment:2 by diver, 11 years ago

Don't know how to reproduce it, sorry.

comment:3 by diver, 11 years ago

Ok, reproduced it a few times with VLC 0.8.6. Basically, what I need to be do to trigger it is to close vlc exactly the same moment VLC window shows up.

VLC will crash without its settings folder on first quit due to #6803. Then quickly press enter to hit "Save report" button in a crash dialog and it crashes the Debugger.

comment:4 by diver, 11 years ago

Attached is a crash report of debugger executable's built with DEBUG=1

comment:5 by anevilyak, 11 years ago

Ok, that yields a better idea of what's going wrong, it'd appear that the RetrieveMemoryBlockJob in question is being cleaned up only after the block manager has already been destroyed. Will need to see what's going wrong there.

comment:6 by anevilyak, 11 years ago

Resolution: fixed
Status: newclosed

Should be fixed in hrev47226.

comment:7 by zhuowei, 11 years ago

Resolution: fixed
Status: closedreopened

I found another way to trigger this in hrev47380 on a GCC2 hybrid.

Steps to reproduce: 1) run /system/apps/Debugger ls (any app that exists cleanly should work) 2) open the Inspect Memory window 3) Inspect the memory for the main method, leave window open 4) hit Run 5) when the program quits, select Quit

I get the same crash in removeBlock.

comment:8 by anevilyak, 11 years ago

Resolution: fixed
Status: reopenedclosed

Fixed in hrev47395, thanks for the reproducible testcase!

Note: See TracTickets for help on using tickets.